--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "XXXXXX",
+  "name": "test-autosend",
   "version": "2.0.0",
-  "description": "XXXXXXXXXXXXXXXXXX",
+  "description": "Auto Send Trigger SMS",
   "engines": {
     "node": "^12.12.16"
   },
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "XXXXXXXXXXXXXXXX.git"
+    "url": "https://github.com/shal06/Test_AutoSendSMS.git"
   },
   "keywords": [
     "journey",
@@ -19,7 +19,7 @@
     "heroku"
   ],
   "author": "IVE Group Developer MR",
-  "homepage": "XXXXXXXXXXXXXXXXX.git#readme",
+  "homepage": "https://github.com/shal06/Test_AutoSendSMS.git#readme",
   "dependencies": {
     "axios": "^0.21.2",
     "base64url": "^3.0.1",
